# sequelit

./: CLAUDE.md  PROJECT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  config_editor.rs  connections.rs  extras.rs  inspector.rs  jobs.rs  mod.rs  monitoring.rs  pg_management.rs  query.rs  roles.rs  saved_queries.rs  schema.rs  workspace.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs  types.rs
src-tauri/src/session/: mod.rs
src/components/: Layout.tsx  SessionBanner.tsx  Sidebar.tsx  TabBar.tsx  TabContent.tsx
src/features/ai/: AiAssistant.tsx
src/features/config/: PgConfigEditor.tsx
src/features/connections/: BackupDialog.tsx  ConnectionForm.tsx  ConnectionList.tsx
src/features/dashboard/: ActivityMonitor.tsx  Dashboard.tsx
src/features/data/: DataBrowser.tsx  ExportDialog.tsx  ImportDialog.tsx  JsonSidebar.tsx
src/features/editor/: ExplainViewer.tsx  QueryTab.tsx  ResultGrid.tsx  SaveQueryDialog.tsx  SavedQueriesPanel.tsx  SqlEditor.tsx
src/features/erd/: ErdDiagram.tsx
src/features/inspector/: SchemaObjectsTab.tsx  TablePropertiesTab.tsx
src/features/jobs/: JobScheduler.tsx
src/features/pgmanagement/: PgManagement.tsx
src/features/preferences/: PreferencesDialog.tsx
src/hooks/: useSession.ts
src/stores/: connectionStore.ts  sessionStore.ts  tabStore.ts  themeStore.ts
(+5 files in other folders)
